--- a/Coursework1.html
+++ b/Coursework1.html
@@ -9,8 +9,16 @@
   
 </head>
 <body >
-        
-    <div id="app">        
+    <div id="app"> 
+            <header style="background-color:rgb(0, 0, 0);font-family:monospace;height:100px">
+                    <img style="height:90px;display: flex;"src="header1.png"><br>
+                    <img style="height:50px;display:flex;margin-left:110px;margin-top:-80px;"src="header.png">
+                    <button style="margin-left:980px;margin-top:-50px;visibility: hidden;height:50px;border:4px solid white;border-radius:20px;width:200px;background-color:rgb(163, 156, 154);color:rgb(0, 0, 0);" id="cartbtn" v-on:click='showCheckout'>
+                        {{cartItemCount}}
+                        <span class="fas fa-cart-plus"></span>    Shopping Cart
+                    </button>
+                </header>
+
         <main>
             <div v-if='showlesson'>
                    
