--- a/Coursework1.html
+++ b/Coursework1.html
@@ -6,7 +6,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  
+    <style>
+            .card {
+              border: 4px solid rgb(0, 0, 0);
+              border-radius: 8px;
+              transition: 0.3s;
+              width: 30%;
+              background-color: rgb(255, 255, 255);
+              margin-bottom:30px;
+              display: inline-block;
+              margin-left:25px;
+            }
+            
+            .card:hover {
+              box-shadow: 0 8px 16px 0 rgba(33, 39, 2, 0.2);
+            }
+            body{
+                background-color:rgb(255, 196, 0)
+            }
+            </style>
 </head>
 <body >
     <div id="app"> 
