--- a/Coursework1.html
+++ b/Coursework1.html
@@ -111,6 +111,15 @@
                     document.getElementById("cartbtn").style.visibility='visible';
 
                 },
+                RemoveItem(lessons) {
+                  for(i=0;this.cart.length;i++){
+                      if(this.cart[i].id==lessons.id){
+                          this.cart.splice(i,1);
+                      }
+                  }
+                   
+                    
+                },
                    showCheckout() {
                     if (  this.showlesson = this.showlesson ? false : true)
                     document.getElementById("sortButtons").style.display='contents';
