--- a/Coursework1.html
+++ b/Coursework1.html
@@ -72,7 +72,19 @@
                              <p style="margin-left: 30px;color:rgb(0, 0, 0);;">Price: {{lessons.price}}</p>
                              <button style="margin-left:160px;margin-bottom:20px;height:50px;width:120px;background-color:rgb(209, 22, 22);color:rgb(255, 196, 0);border:4px solid rgb(255, 196, 0);border-radius:30px;"  v-on:click='RemoveItem(lessons)' >Remove</button>
                         
-                            </div>      
+                            </div>    
+                            <div id="chkout" style="background-color:rgb(255, 55, 5);border:4px solid black;border-radius:30px;">
+                                    <h2 style="margin-left:530px;font-family:Brush script MT;font-size:40px;color:rgb(145, 144, 144);">Checkout</h2>
+                                            <form name="theform" style="margin-left:30px;color:white;">
+                                                    <label >Name:</label>
+                                                    <input style="width:480px" type="text" id="txtName" onkeypress="return Validate(event);" />
+                                                    <span id="lblError"></span>
+                                                    <label style="margin-left:30px;">  Phone No:</label>
+                                                    <input style="width:480px" v-model="order.Phone" type="number" type="text" onKeyup="checkform()" /><br><br>
+                                                   
+                                                    <input style="visibility:hidden;margin-left:450px;margin-bottom:20px;height:40px;width:250px;background-color:rgb(8, 8, 8);color:rgb(255, 196, 0);border:4px solid rgb(255, 196, 0);border-radius:30px;" id="submitbutton" type="submit" value="Submit" v-on:click=submitForm() />
+                                                    </form> 
+                                   </div>  
                     </div>    
                 <div   v-if='showlesson'>
                     <div v-for="lessons in Sort">
