--- a/Coursework1.html
+++ b/Coursework1.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>After School Activities</title>
-    <script src="https://unpkg.com/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="lessons.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <meta charset="UTF-8"/>
